--- a/content/events/2022-08-18.md
+++ b/content/events/2022-08-18.md
@@ -10,10 +10,16 @@ template: event
 
 Frenia is a Milwaukee local experimental collective. Today they are this, tomorrow they are that. Discovery fuels Frenia’s creations, forming a live experience that is seemingly chaotic, phasing in and out of harmonious noise.
 
+![Frenia](images/frenia.jpg)
+
 ### Roberto Harrison
 
 Roberto Harrison’s books include *Os* (subpress, 2006), *Counter Daemons* (Litmus Press, 2006), *bicycle* (Noemi Press, 2015), *culebra* (Green Lantern Press, 2016), *Bridge of the World* (Litmus Press, 2017), *Yaviza* (Atelos, 2017), as well as many chapbooks. He is also the editor of Bronze Skull Press which has published over 20 chapbooks, including the work of many Midwestern poets. Most recently Roberto served as a co-editor for the *Resist Much/ Obey Little* anthology. He was the Milwaukee Poet Laureate for 2017-2019. He is also a visual artist and his most recent series of drawings, *“Tropical Lung: Tec Alliance”* is featured online as part of Woodland Pattern’s exhibition series *What Can I Do?: Spirituality, Civic Engagement, & Artistic Practice*. He lives in Milwaukee with his wife, the poet Brenda Cárdenas.
 
+![Roberto Harrison](images/roberto_harrison.jpg)
+
 ### Marielle Allschwang
 
 —songwriter, vocalist, multi-instrumentalist, and member of some of Milwaukee’s finest ensembles (Collections of Colonies of Bees, Hello Death)—sits at the center of the band she has named The Visitations, where she “[commands] the stage with hushed intensity” while, together, her formidable ensemble “[make the past 20+ years of Milwaukee post-rock] thunder and glisten” (Evan Rytlewski, Shepherd Express).
+
+![Marielle Allschwang](images/marielle_allschwang.jpg)
