Add gallery page and post photos

--- a/content/events/2022-07-24.md
+++ b/content/events/2022-07-24.md
@@ -1,9 +1,8 @@
 title: ira george, Chelsea Tadeyeske, & Mere of Light @ Milwaukee River
-event-flyer: ?
 event-date: 2022-07-24
 event-time: 6:00pm
 event-location: Lovemom's (see description)
-thumbnail: july_22_thumbnail.png
+thumbnail: 2022-07-24_lovemoms/event_thumbnail.png
 template: event
 
 ### ira george
