--- a/content/events/2022-09-24.md
+++ b/content/events/2022-09-24.md
@@ -3,7 +3,7 @@ event-date: 2022-09-24
 event-time: TBA
 event-location: TBA
 template: event
-thumbnail: sept_22_thumbnail.png
+thumbnail: 2022-09-24_echo-valley/event_thumbnail.png
 
 ### Gauss
 
