--- a/content/events/2022-10-01.md
+++ b/content/events/2022-10-01.md
@@ -3,7 +3,7 @@ event-date: 2022-10-01
 event-time: TBA
 event-location: Washington Park | 1859 N. 40th Street, Milwaukee WI 53208
 template: event
-thumbnail: oct_22_thumbnail.png
+thumbnail: 2022-10-01_washington-park/event_thumbnail.png
 
 ### Social Caterpillar
 
