--- a/content/events/2022-11-06.md
+++ b/content/events/2022-11-06.md
@@ -3,7 +3,7 @@ event-date: 2022-11-06
 event-time: TBA
 event-location: Olbrich Botanical Gardens | 3330 Atwood Avenue, Madison, WI 53704
 template: event
-thumbnail: nov_22_thumbnail.png
+thumbnail: 2022-11-06_olbrich-gardens/event_thumbnail.png
 
 ### Charles Edward Payne 
 
