--- a/content/events/2023-05-28.md
+++ b/content/events/2023-05-28.md
@@ -4,6 +4,7 @@ event-time: 5pm
 event-location: Doctor's Park | 1870 E Fox Ln, Fox Point, WI 53217
 template: event
 thumbnail: 2023-05-28_doctors-park/doctors-park-may-2023-thumb.jpeg
+summary: The first show of the 2023 Out There season will take place May 28th at Doctor's Park. Featured artists include Flowers, Midheaven, and Forest Management from Chicago.
 
 The first show of the 2023 Out There season will take place May 28th at Doctor's Park. Featured artists include Flowers, Midheaven, and Forest Management from Chicago. The show begins at 5pm. Upon arrival, park in the parking lot and head toward the rest rooms overlooking the lake. 
 
