--- a/content/events/2023-07-08.md
+++ b/content/events/2023-07-08.md
@@ -4,7 +4,11 @@ event-time: 5pm
 event-location: Havenwoods State Forest | 6141 N Hopkins St, Milwaukee, WI 53209
 template: event
 thumbnail: 2023-07-08_havenwoods-state-forest/2023-07-08_havenwoods-thumb.jpeg
+summary: Havenwoods State Forest will welcome improvisational string quartet Tontine Ensemble along with experimental artists C Vadi and Nicholas Elert at the Havenwoods State Forest outdoor ampitheater.
+
 
 Havenwoods State Forest will welcome improvisational string quartet Tontine Ensemble along with experimental artists C Vadi and Nicholas Elert at the Havenwoods State Forest outdoor ampitheater. The show will begin at 5pm. 
+
+![Event Flyer](images/2023-07-08_havenwoods-state-forest/flyer.JPG){: .article-image}
 
 ![Tontine Ensemble](images/2023-07-08_havenwoods-state-forest/tontine.jpeg){: .article-image}
